:bug: Fix hard to read text in dark theme

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -8,6 +8,7 @@ body {
 	box-sizing: border-box;
 	// remove the scrollbar when its not needed
 	overflow: auto;
+	color: $lightText;
 }
 
 // for making a container full height
